# infinity_tracker

./: .buildinfo  .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.txt  DESIGN.md  LICENSE  README.md  README.rst  genindex.html  howto.html  index.html  local.yml  manage.py  objects.inv  production.yml  proxy.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  tracker.py  users.html  utils.py
.doctrees/: environment.pickle  howto.doctree  index.doctree  users.doctree
.doctrees/api/: hvac.doctree  hvac.migrations.doctree  infinity_tracker.contrib.doctree  infinity_tracker.contrib.sites.doctree  infinity_tracker.contrib.sites.migrations.doctree  infinity_tracker.doctree  infinity_tracker.users.doctree  infinity_tracker.users.migrations.doctree  infinity_tracker.users.tests.doctree  infinity_tracker.utils.doctree  modules.doctree  proxy.doctree  proxy.migrations.doctree
.doctrees/pycharm/: configuration.doctree
.envs/.local/: .postgres
.github/: dependabot.yml
.github/workflows/: django.yml  docs.yml  pre-commit.yml
_sources/api/: hvac.migrations.rst.txt  hvac.rst.txt  infinity_tracker.contrib.rst.txt  infinity_tracker.contrib.sites.migrations.rst.txt  infinity_tracker.contrib.sites.rst.txt  infinity_tracker.rst.txt  infinity_tracker.users.migrations.rst.txt  infinity_tracker.users.rst.txt  infinity_tracker.users.tests.rst.txt  infinity_tracker.utils.rst.txt  modules.rst.txt  proxy.migrations.rst.txt  proxy.rst.txt
api/: hvac.html  hvac.migrations.html  infinity_tracker.contrib.html  infinity_tracker.contrib.sites.html  infinity_tracker.contrib.sites.migrations.html  infinity_tracker.html  infinity_tracker.users.html  infinity_tracker.users.migrations.html  infinity_tracker.users.tests.html  infinity_tracker.utils.html  modules.html  proxy.html  proxy.migrations.html
app/: models.py  tests.py  views.py
compose/production/traefik/: traefik.yml
config/: api_router.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  make.bat
docs/_source/: howto.rst  index.rst  users.rst
docs/_source/pycharm/: configuration.rst
hvac/: apps.py  models.py
hvac/migrations/: 0001_initial.py  0002_auto_20200830_1421.py
infinity_tracker/: conftest.py
infinity_tracker/contrib/sites/migrations/: 0003_set_site_domain_and_name.py  0004_auto_20200830_1421.py
infinity_tracker/templates/: base.html
infinity_tracker/users/: admin.py  apps.py  models.py  urls.py
infinity_tracker/users/migrations/: 0002_auto_20200830_1421.py
infinity_tracker/users/tests/: factories.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_models.py  test_urls.py  test_views.py
proxy/: admin.py  urls.py  views.py
pycharm/: configuration.html
requirements/: base.txt  local.txt  production.txt
