[tool.poetry]
name = "infinity_tracker"
version = "0.1.0"
description = ""
authors = ["jokajak <jokajak@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
Django = "^3.1"
django-environ = "^0.4.5"
pytz = "2020.1"
python-slugify = "4.0.1"
argon2-cffi = "20.1.0"
django-model-utils = "4.0.0"
django-allauth = "0.42.0"
django-crispy-forms = "1.9.2"
djangorestframework = "3.11.1"
Pillow = "7.2.0"
django-cors-headers = "3.5.0"
whitenoise = "^5.2.0"
requests = "^2.24.0"
psycopg2 = "^2.8.5"
defusedxml = "^0.6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"
black = "^20.8b1"
flake8 = "^3.8.3"
pytest = "^6.0.1"
pytest-django = "^3.9.0"
pytest-cov = "^2.10.1"
pytest-xdist = "^1.34.0"
podman-compose = "^0.1.5"
django-debug-toolbar = "2.2"
django-extensions = "3.0.6"
django-coverage-plugin = "1.8.0"
factory-boy = "3.0.1"
flake8-isort = "^4.0.0"
sphinx-autobuild = "2020.9.1"
sphinx = "^3.2.1"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
