[tool.poetry]
name = "infinity_tracker"
version = "0.1.0"
description = ""
authors = ["jokajak <jokajak@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6.1,<4"
Django = "^3.1"
django-environ = "^0.4.5"
pytz = "2021.1"
python-slugify = "4.0.1"
argon2-cffi = "20.1.0"
django-model-utils = "4.1.1"
django-allauth = "0.44.0"
django-crispy-forms = "1.11.1"
djangorestframework = "3.12.2"
Pillow = "8.1.0"
django-cors-headers = "3.7.0"
whitenoise = "^5.2.0"
requests = "^2.25.1"
psycopg2 = "^2.8.6"
defusedxml = "^0.6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"
pytest-django = "^4.1.0"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.1"
podman-compose = "^0.1.5"
django-debug-toolbar = "3.2"
django-extensions = "3.1.1"
django-coverage-plugin = "1.8.0"
factory-boy = "3.2.0"
flake8-isort = "^4.0.0"
sphinx-autobuild = "2020.9.1"
sphinx = "^3.5.1"
bandit = "^1.7.0"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.6.0"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
